add api key config

--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,6 @@
 SEARCH_API_KEY=API_KEY
 USAJOBS_API_KEY=API_KEY
 USAJOBS_EMAIL_ADDRESS=some_email@gmail.com
+ADZUNA_API_CLIENT_ID=
+ADZUNA_API_KEY=
 ES_API_KEY=API_KEY
