--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires-poetry = ">=2.0"
 description = "A web application for generating qr codess"
 
 [tool.poetry.dependencies]
-python = "^3.13"
+python = ">=3.13,<3.14"
 requests = "^2.32.0"
 node-semver = "^0.8.1"
 django = "^4.2.22"
@@ -29,6 +29,17 @@ google-search-results = "^2.4.2"
 pyap = "^0.3.1"
 nltk = "^3.9.1"
 python-dotenv = "^1.1.1"
+pandas = "^2.3.1"
+spacey = "^0.1.1"
+nlp = "^0.4.0"
+spacy = "^3.8.7"
+rapidfuzz = "^3.13.0"
+lxml = "^6.0.0"
+parsel = "^1.10.0"
+html2text = "^2025.4.15"
+html5lib = "^1.1"
+skillner = "^1.0.3"
+ipython = "^9.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
